Furnace report (#23)
* Expense (#12)

* Created Billing Module with DC's and Invoice Sent Automatically

* Account Module

* Added Expense Module

* Expense (#13)

* Created Billing Module with DC's and Invoice Sent Automatically

* Account Module

* Added Expense Module

* updated Dc and Invoice genaration pdf

* feat: Update Furnace Heat and Material Item DTOs to use UUID for orderId

- Changed orderId type from String to UUID in FurnaceHeatResponse.
- Updated HeatMaterialItemRequest and HeatMaterialItemResponse to import HeatMaterialType from the correct Enum package.
- Added HeatsByOrderResponse DTO to encapsulate heat data by order.
- Introduced HeatMaterialType enum for better type safety.
- Enhanced FurnaceHeats entity to manage materials used more effectively.
- Updated FurnaceHeatsRepository with new queries to fetch heats by orderId and furnaceId.
- Modified FurnaceHeatService to include a method for retrieving heats by orderId.
- Updated FurnaceHeatServiceImpl to implement the new method and map responses accordingly.
- Refactored FurnaceController and FurnaceService to improve constructor injection.
- Added new endpoints in VendorLedgerController for retrieving vendor balances and ledger entries.
- Updated application.yaml for database connection settings.
- Created SQL migration to add order_id and time columns to furnace_heats table.

* feat: Update Furnace Heat and Material Item DTOs to use UUID for orderId

- Changed orderId type from String to UUID in FurnaceHeatResponse.
- Updated HeatMaterialItemRequest and HeatMaterialItemResponse to import HeatMaterialType from the correct Enum package.
- Added HeatsByOrderResponse DTO to encapsulate heat data by order.
- Introduced HeatMaterialType enum for better type safety.
- Enhanced FurnaceHeats entity to manage materials used more effectively.
- Updated FurnaceHeatsRepository with new queries to fetch heats by orderId and furnaceId.
- Modified FurnaceHeatService to include a method for retrieving heats by